--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.2'
     compile 'org.jsoup:jsoup:1.8.1'
     compile 'com.android.support:support-v13:21.0.2'
+    compile 'com.doomonafireball.betterpickers:library:1.5.2'
 }
