--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.0"
-
     defaultConfig {
         applicationId "com.spacejake.jake.ultimatepurduediner"
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -17,10 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility org.gradle.api.JavaVersion.VERSION_1_7
         targetCompatibility org.gradle.api.JavaVersion.VERSION_1_7
+    }
+    productFlavors {
     }
 }
 
